[gd_scene load_steps=4 format=3 uid="uid://bb7ukfr71y5dj"]

[ext_resource type="Texture2D" uid="uid://dm3m4rfak3gjn" path="res://Tile/Tile-Placeholder.png" id="1_0oums"]
[ext_resource type="Script" path="res://UI/pause_screen.gd" id="2_njy3h"]

[sub_resource type="LabelSettings" id="LabelSettings_ekevh"]
font_size = 32

[node name="PauseScreen" type="NinePatchRect"]
process_mode = 3
texture_filter = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -256.0
offset_right = 360.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_0oums")
script = ExtResource("2_njy3h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_right = 53.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Paused"
label_settings = SubResource("LabelSettings_ekevh")

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back To Game"

[node name="ResetLevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset Level"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back To Level Select"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit To Main Menu"

[connection signal="button_down" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_down"]
[connection signal="button_down" from="VBoxContainer/ResetLevelButton" to="." method="_on_reset_level_button_button_down"]
[connection signal="button_down" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="button_down" from="VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_button_down"]
[connection signal="button_down" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_button_down"]
